<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" >

    <GridLayout
        android:id="@+id/commentButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/watch_me"
            android:text="@string/comment_watch_me"
            android:onClick="add"/>

        <Button
            android:id="@+id/whip"
            android:text="@string/comment_whip"
            android:onClick="add"/>

        <Button
            android:id="@+id/nea"
            android:text="@string/comment_nea"
            android:onClick="add"/>

        <Button
            android:id="@+id/bop"
            android:text="@string/comment_bop"
            android:onClick="add"/>

    </GridLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</LinearLayout>